# nexil

./: .gitignore  LICENSE  README.md  STANDALONE.py  export_stateless.py  main.py  npu_runner.py  pyproject.toml
aur/: PKGBUILD
nexil/: __main__.py  chat.py  cli.py  config.py  devices.py  download.py  models.py  streamer.py
nexil/tools/: __init__.py  datetime_tool.py
npu_assistant/: __main__.py  chat.py  cli.py  config.py  devices.py  download.py  models.py  streamer.py
npu_assistant/tools/: __init__.py
