[project]
name = "npu-personal-assistant"
version = "0.1.0"
description = "Local LLM chat assistant powered by Intel NPU via OpenVINO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openvino-genai>=2026.0.0",
    "optimum-intel[openvino]>=1.25.0",
    "rich>=14.0.0",
]

[project.scripts]
npu-assistant = "npu_assistant.__main__:main"
