[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexil"
version = "0.1.3"
description = "Local LLM chat assistant for Intel hardware via OpenVINO"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "James Crockett"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "openvino-genai>=2026.0.0",
    "optimum-intel[openvino]>=1.25.0",
    "rich>=14.0.0",
    "InquirerPy>=0.3.4",
]

[project.scripts]
nexil = "nexil.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["nexil"]

[project.urls]
Homepage = "https://github.com/James-Crockett/nexil"
Repository = "https://github.com/James-Crockett/nexil"
Issues = "https://github.com/James-Crockett/nexil/issues"
